--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ variables:
   TERRAFORM_MODULE_DIR: ${CI_PROJECT_DIR}
   TERRAFORM_MODULE_NAME: jhaas-jupyterhub
   TERRAFORM_MODULE_SYSTEM: local
-  TERRAFORM_MODULE_VERSION: ${CI_COMMIT_SHORT_SHA}
+  TERRAFORM_MODULE_VERSION: 0.1.1
   TF_IMAGE: hashicorp/terraform
 
 stages:
